# stealth-ai

./: .dockerignore  .gitignore  .livekitignore  Dockerfile  README.md  business_profile.py  config.yaml  docker-compose.yml  livekit.toml  pyproject.toml  pytest.ini  run_api.sh  sip_lifecycle.py  taskfile.yaml  traces.sqlite3
agents/: BaseAgent.py  agent copy 2.py  agent copy.py  agent.py  billing.py  booking.py  cancel.py  intent_agent copy.py  main.py  operator.py  parts.py  pricing.py  reschedule.py  router.py  state.py  status.py  validators.py
api/: main.py  utils.py
common/: base_agent.py  call_recorder.py  common_tools.py  config_loader.py  event_bus.py  logging_config.py  models.py  notifying_tts.py  stt_factory.py  utils.py  voice_factory.py
constants/: __init__.py  flow_defs.py  types.py
constants/flows/: __init__.py  book.py  cancel.py  eta.py  other.py  price.py  reschedule.py  status.py
constants/prompts/: intent_prompts copy.py  intent_prompts.py
db/: call.py  models.py  models_artifacts.py  session.py  utils.py
scripts/: db_init.sh  run_all.sh  run_api.sh
services/: address_validator.py  call_service.py  schedule_service.py  user_service.py
sip/: dispatch-rule.json
tests/: conftest.py  test_book.py  test_call_recorder.py  test_runbook_text_user.py  test_sample.ipynb  test_scheduling_service.py
tests/agents/: test_agent_wiring.py  test_booking_agent.py  test_booking_behavior.py  test_cancel_agent.py  test_pricing_agent.py  test_status_agent.py  (+2 more)
tools/: tools_schedule.py  tools_user.py
utils/: logger.py  prompt_logger.py  turn_gate.py
(+22 files in other folders)
